css/style.css
@charset "utf-8";
body {
    margin: 0;
    padding: 0;
    background-color: #cccccc;
    color: #333333;
    font-size: 15px;
    line-height: 2;
}

header {
    width: 960px;
    height: 100px;
    margin: 0 auto;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    margin-top: 0;
}

h2 {
    font-family: 'Bitter', serif;
    font-size: 24px;
}

img {
    vertical-align: bottom;
}

ul {
    margin: 0;
    padding: 0;
}

a {
    color: #3583aa;
    text-decoration: none;
}

a:visited {
    color: #3583aa;
}

a:hover {
    text-decoration: underline;
}

.logo {
    float: left;
    margin-top: 50px;
}

.global-nav {
    float: right;
    margin-top: 60px;
}

.global-nav li {
    float: left;
    margin: 0 20px;
    font-size: 20px;
    list-style: none;
    font-family: 'Bitter', serif;
}

.global-nav li a {
    color: #ffffff;
}

.global-nav li a:hover {
    border-bottom: 2px solid #ffffff;
    padding-bottom: 3px;
    text-decoration: none;
}

#wrap {
    clear: both;
    background-color: #ffffff;
    margin-top: 220px;
    padding: 35px 0;
}

.content {
    width: 960px;
    margin: 0 auto;
}

footer {
    text-align: center;
    color: #ffffff;
    padding: 20px 0;
}

footer small {
    font-size: 12px;
}

#about {
    background-image: url(../images/wood.jpg);
    background-repeat: no-repeat;
    background-position: center top;
    /*画像の表示位置は固定*/
    background-attachment: fixed;
    background-size: 100% auto;
}

#about .profile-txt {
    width: 540px;
    float: left;
}

#about .profile-txt span {
    font-weight: bold;
}

#about .profile-image {
    float: right;
}

#about .career th {
    width: 240px;
    background-color: #f0f0f0;
    padding: 12px 0;
    border: 1px solid #cccccc;
}

#about .career td {
    width: 660px;
    padding: 12px 0 12px 40px;
    border: 1px solid #cccccc;
}

.main-center {
    width: 940px;
    margin: 0 auto;
}

.icon:before {
    content: "";
    padding-right: 10px;
    border-left: 7px solid #9cb4a4;
}

.clearfix:after {
    content: "";
    display: block;
    clear: both;
}

section {
    margin-bottom: 40px;
}

table {
    border-spacing: 0;
    border-collapse: collapse;
}

